<resources>
    <string name="app_name">NutriFood</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_category">Category</string>
    <string name="nav_item_meals">Meals</string>
    <string name="nav_item_profil">Profil</string>
    <string name="group_title_com">Communicate</string>
    <string name="nav_item_share">Share</string>

    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_profil">Profil</string>
    <string name="action_logout">logout</string>
    <string name="action_add">new meal</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- User -->
    <string name="editTextUsername">Username</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextFirstname">Firstname</string>
    <string name="editTextLastname">Lastname</string>
    <string name="editTextAge">Age</string>

    <!-- Meal -->
    <string name="editTextMealname">Meal name</string>
    <string name="editTextAuthor">Author</string>
    <string name="editTextDescription">Description</string>
    <string name="editTextInstruction">Instruction</string>
    <string name="editTextDifficulty">Difficulty</string>
    <string name="editTextCookTime">Cook time in minutes</string>
    <string name="editTextCategory">Category</string>
    <string name="editTextIngredients">Ingredients</string>


    <string name="connect">Connect</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="add">Add</string>

    <!-- Keys -->
    <!-- User -->
    <string name="username_key">username</string>
    <string name="password_key">password</string>
    <string name="email_key">email</string>
    <string name="firstname_key">firstname</string>
    <string name="lastname_key">lastname</string>
    <string name="age_key">age</string>
    <string name="allergy_key">allergy</string>
    <string name="spetial_key">spetialFood</string>

    <!-- MEAL CATEGORY -->
    <string name="id_key">_id</string>
    <string name="name_key">name</string>
    <!-- MEAL -->
    <string name="author_key">author</string>
    <string name="category_key">category</string>
    <string name="description_key">description</string>
    <string name="difficulty_key">difficulty</string>
    <string name="cooktime_key">cooktime</string>
    <string name="ingredients_key">ingredients</string>
    <string name="instruction_key">instruction</string>
    <string name="image_key">image</string>
    <string name="video_key">video</string>
    <string name="nutritionfact_key">nutritionfact</string>
    <string name="comment_key">comment</string>
    <string name="mealid_key">meal</string>
    <string name="date_key">date</string>
    <string name="content_key">comment</string>
    <string name="rating_key">vote</string>
    <string name="value_key">value</string>

    <string name="token_key">token</string>
    <string name="error_key">message</string>
    <string name="authorization_key">Authorization</string>

    <!-- URL Relative -->
    <!-- <string name="Base_URL">http://10.0.2.2:3000/api/v1</string> -->
    <!-- <string name="Base_URL">https://nutrifood.ovh/api/v1</string> -->
    <!-- <string name="Base_URL">http://192.168.1.102:3000/api/v1</string> -->
    <!-- <string name="Base_URL">http://192.168.1.103:3000/api/v1</string> -->
    <string name="Base_URL">http://192.168.1.102:3000/api/v1</string> -->
    <string name="login_URL">/auth/signin</string>
    <string name="comment_URL">/comment</string>
    <string name="users_URL">/users</string>
    <string name="user_URL">/user</string>
    <string name="meals_URL">/meals</string>
    <string name="search_URL">/meals/name</string>
    <string name="image_URL">/meals/image</string>
    <string name="category_URL">/category</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_meal_list">Meals</string>
    <string name="title_meal_detail">Meal Detail</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_create_meal">Create Meal</string>

    <string name="ipsum">
        Morbi posuere lorem nec elit dapibus, vitae accumsan mauris pellentesque.
        Vestibulum a lobortis mi. Vestibulum lacinia molestie semper. Pellentesque
        ultrices arcu lacus, interdum mollis nibh convallis ut. Aliquam sagittis
        sem a lacus gravida, eu accumsan purus volutpat. Donec tempus, est id
        tristique consectetur, lacus ligula dignissim turpis, cursus commodo turpis
        libero in purus. Phasellus tempus gravida tempor.
    </string>

    <string-array name="CategoryList">
        <item>Mediterranean</item>
        <item>Asian</item>
        <item>Vegetarian</item>
        <item>French</item>
        <item>British</item>
        <item>Indian</item>
    </string-array>

    <string-array name="DifficultyList">
        <item>Easy</item>
        <item>Hard</item>
        <item>Master</item>
    </string-array>

</resources>
