<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/nav_item_category" />
        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/ic_menu_meals"
            android:title="@string/nav_item_meals" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_menu_profil"
            android:title="@string/nav_item_profil" />
    </group>

    <item android:title="@string/group_title_com">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_item_share" />
        </menu>
    </item>

</menu>
