<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nutrifood2.CreateMealActivity"
    tools:showIn="@layout/activity_create_meal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#bbbbbb">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTextMealname"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/mealname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingRight="16dp"
                android:background="@color/colorLight"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTextCategory"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLight"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/CategoryList"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTextDifficulty"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLight"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <Spinner
                    android:id="@+id/difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/DifficultyList"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTextCookTime"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/cooktime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@color/colorLight"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTextDescription"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="5"
                android:scrollbars="vertical"
                android:gravity="top|left"
                android:background="@color/colorLight"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTextIngredients"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ingredient"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@color/colorLight"
                    android:paddingRight="40dp"/>

                <ImageButton
                    android:id="@+id/add_ingredient"
                    android:background="#00CC00"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_add"
                    android:layout_centerVertical="true"
                    android:layout_alignTop="@+id/ingredient"
                    android:layout_alignBottom="@+id/ingredient"
                    android:layout_alignRight="@+id/ingredient" />

            </RelativeLayout>

            <com.nutrifood2.Utils.NonScrollListView
                android:id="@+id/ingredient_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

            </com.nutrifood2.Utils.NonScrollListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editTextInstruction"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/instruction"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:background="@color/colorLight"
                    android:paddingRight="40dp"/>

                <ImageButton
                    android:id="@+id/add_instruction"
                    android:background="#00CC00"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/ic_menu_add"
                    android:layout_centerVertical="true"
                    android:layout_alignTop="@+id/instruction"
                    android:layout_alignBottom="@+id/instruction"
                    android:layout_alignRight="@+id/instruction" />

            </RelativeLayout>

            <com.nutrifood2.Utils.NonScrollListView
                android:id="@+id/instruction_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

            </com.nutrifood2.Utils.NonScrollListView>

            <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CREATE"
                android:background="@drawable/button"
                android:textColor="@color/colorLight"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
